...
    <string name="extra_service">Extra Service</string>
    <string name="extra_service_sentence_case">Extra service</string>
    <string name="facility_issue">Facility Issue</string>
    <string name="facility_issue_sentence_case">Facility issue</string>
    <string name="favorite_stop">favorite stop</string>
    <string name="favorite_stops_first_time_toast_message">Favorite stops replaces the prior starred routes feature.</string>
    <string name="favorites_link">Favorites</string>
    <string name="favorites_toast_add">&lt;b&gt;%1$s %2$s&lt;/b&gt; at &lt;b&gt;%3$s&lt;/b&gt; added to Favorites</string>
    <string name="favorites_toast_add_fallback">Added to Favorites</string>
    <string name="favorites_toast_add_multi">&lt;b&gt;%1$s&lt;/b&gt; at &lt;b&gt;%2$s&lt;/b&gt; added to Favorites</string>
    <string name="favorites_toast_remove">&lt;b&gt;%1$s %2$s&lt;/b&gt; at &lt;b&gt;%3$s&lt;/b&gt; removed from Favorites</string>
    <string name="favorites_toast_remove_fallback">Removed from Favorites</string>
    <string name="feature_flag_debug_mode">Debug Mode</string>
...
    <string name="medical_emergency">Medical Emergency</string>
    <string name="medical_emergency_lowercase">medical emergency</string>
    <string name="midday">Midday</string>
    <string name="minutes_abbr">&lt;b&gt;%1$d&lt;/b&gt; min</string>
    <string name="modified_service">Modified Service</string>
    <string name="modified_service_sentence_case">Modified service</string>
    <string name="more_link">More</string>
    <string name="more_link_call">Select to call</string>
    <string name="more_link_external">External link</string>
    <string name="more_page_footer">Made with ♥ by the T</string>
    <string name="more_section_feature_flags">Feature Flags</string>
    <string name="more_section_public_beta">Test New Features</string>
    <string name="more_section_public_beta_note">Get early access to test new features and provide feedback</string>
    <string name="more_section_resources">Resources</string>
    <string name="more_section_settings">Settings</string>
    <string name="more_section_support">General MBTA Information &amp; Support</string>
    <string name="more_section_support_note_accessibility">711 for TTY callers; VRS for ASL callers</string>
    <string name="more_section_support_note_hours">Monday through Friday: 6:30 AM - 8 PM</string>
    <string name="more_title">MBTA Go</string>
    <string name="morning">Morning</string>
    <string name="nearby_transit">Nearby Transit</string>
    <string name="nearby_transit_link">Nearby</string>
    <string name="new_feature_screen_reader_header_prefix">New feature. %1$s</string>
    <string name="next_day">next day</string>
    <string name="next_stop">Next stop</string>
    <string name="next_trip_at">Next trip at &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="next_trip_at_tomorrow">Next trip at &lt;b&gt;%1$s&lt;/b&gt; tomorrow</string>
    <string name="next_trip_on">Next trip on &lt;b&gt;%1$s&lt;/b&gt;</string>
...
    <string name="policy_change_sentence_case">Policy change</string>
    <string name="power_problem">Power Problem</string>
    <string name="power_problem_lowercase">power problem</string>
    <string name="predictions_unavailable_details">Service is running, but predicted arrival times aren’t available. Check the map to see where %1$s are right now.</string>
    <string name="predictions_unavailable_details_hide_maps">Service is running, but predicted arrival times aren’t available.</string>
    <string name="promo_favorites_body">Now save your frequently used stops to &lt;b&gt;one easy place&lt;/b&gt;.</string>
    <string name="promo_favorites_header">Add your favorites</string>
    <string name="promo_notifications_body">We’ll tell you about any problems before you go!</string>
    <string name="promo_notifications_header">Now get disruption notifications</string>
    <string name="promo_notifications_step1">Add a Favorite stop</string>
    <string name="promo_notifications_step2">Set your own schedule</string>
    <string name="rail_defect">Rail Defect</string>
    <string name="rail_defect_lowercase">rail defect</string>
...
