package com.mbta.tid.mbta_app.android

import androidx.compose.runtime.CompositionLocalProvider
import androidx.compose.ui.test.ExperimentalTestApi
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.isHeading
import androidx.compose.ui.test.junit4.v2.createComposeRule
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.lifecycle.Lifecycle
import androidx.lifecycle.compose.LocalLifecycleOwner
import androidx.lifecycle.testing.TestLifecycleOwner
import androidx.test.rule.GrantPermissionRule
import com.mbta.tid.mbta_app.android.location.MockFusedLocationProviderClient
import com.mbta.tid.mbta_app.android.testUtils.assertCanBeDisplayed
import com.mbta.tid.mbta_app.android.testUtils.waitUntilDefaultTimeout
import com.mbta.tid.mbta_app.android.testUtils.waitUntilExactlyOneExistsDefaultTimeout
import com.mbta.tid.mbta_app.android.util.LocalLocationClient
import com.mbta.tid.mbta_app.model.FeaturePromo
import com.mbta.tid.mbta_app.network.MockPhoenixSocket
import com.mbta.tid.mbta_app.repositories.DefaultTab
import com.mbta.tid.mbta_app.repositories.MockOnboardingRepository
import com.mbta.tid.mbta_app.repositories.MockTabPreferencesRepository
import com.mbta.tid.mbta_app.usecases.IFeaturePromoUseCase
import dev.mokkery.MockMode
import dev.mokkery.answering.returns
import dev.mokkery.everySuspend
import dev.mokkery.mock
import kotlin.test.assertEquals
import kotlinx.coroutines.flow.MutableStateFlow
import kotlinx.coroutines.flow.asStateFlow
import kotlinx.coroutines.test.UnconfinedTestDispatcher
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.koin.test.KoinTest

@OptIn(ExperimentalTestApi::class)
class ContentViewTests : KoinTest {

    @get:Rule
    val runtimePermissionRule =
        GrantPermissionRule.grant(android.Manifest.permission.ACCESS_FINE_LOCATION)
    @get:Rule val composeTestRule = createComposeRule(effectContext = UnconfinedTestDispatcher())

    @Before
    fun setUp() {
        loadKoinMocks()
    }

    @Test
    fun testSwitchingTabs() {
        val flow = MutableStateFlow(null).asStateFlow()
        composeTestRule.setContent {
            CompositionLocalProvider(
                LocalLocationClient provides MockFusedLocationProviderClient()
            ) {
                ContentView(flow, {})
            }
        }

        composeTestRule.onNodeWithText("More").performClick()
        composeTestRule.onNodeWithText("MBTA Go").assertCanBeDisplayed()

        composeTestRule.onNodeWithText("Nearby").performClick()
        composeTestRule.onNodeWithText("Nearby Transit").assertCanBeDisplayed()
    }

    @Test
    fun testSetsDefaultTab() {
        val flow = MutableStateFlow(null).asStateFlow()
        val repo = MockTabPreferencesRepository(DefaultTab.Favorites)
        loadKoinMocks { tabPreferences = repo }

        composeTestRule.setContent {
            CompositionLocalProvider(
                LocalLocationClient provides MockFusedLocationProviderClient()
            ) {
                ContentView(flow, {})
            }
        }

        composeTestRule.onNode(hasText("Favorites") and isHeading()).assertCanBeDisplayed()
        composeTestRule.onNodeWithText("Nearby").performClick()
        composeTestRule.waitUntilExactlyOneExistsDefaultTimeout(hasText("Nearby Transit"))
        assertEquals(DefaultTab.Nearby, repo.defaultTab)
        composeTestRule.onNodeWithText("Favorites").performClick()
        composeTestRule.waitUntilExactlyOneExistsDefaultTimeout(
            hasText("Favorites") and isHeading()
        )
        assertEquals(DefaultTab.Favorites, repo.defaultTab)
    }

    @Test
    fun testShowsPromos() {

        val mockFeaturePromos = mock<IFeaturePromoUseCase>(MockMode.autofill)

        everySuspend { mockFeaturePromos.getFeaturePromos() } returns
            listOf(FeaturePromo.EnhancedFavorites)

        val vm =
            ContentViewModel(
                featurePromoUseCase = mockFeaturePromos,
                onboardingRepository = MockOnboardingRepository(),
                tabPreferencesRepository = MockTabPreferencesRepository(),
            )

        composeTestRule.setContent {
            val flow = MutableStateFlow(null)
            CompositionLocalProvider(
                LocalLocationClient provides MockFusedLocationProviderClient()
            ) {
                ContentView(flow, {}, viewModel = vm)
            }
        }

        composeTestRule.waitUntilExactlyOneExistsDefaultTimeout(hasText("Add your favorites"))
        composeTestRule
            .onNodeWithText("Now save your frequently used stops", substring = true)
            .assertCanBeDisplayed()
    }

    @Test
    fun testSocketClosedOnPause() {
        val lifecycleOwner = TestLifecycleOwner(Lifecycle.State.RESUMED)
        var onAttachCount = 0
        var onDetatchCount = 0

        val flow = MutableStateFlow(null).asStateFlow()
        loadKoinMocks(socket = MockPhoenixSocket({ onAttachCount += 1 }, { onDetatchCount += 1 }))

        composeTestRule.setContent {
            CompositionLocalProvider(
                LocalLocationClient provides MockFusedLocationProviderClient(),
                LocalLifecycleOwner provides lifecycleOwner,
            ) {
                ContentView(flow, {})
            }
        }

        composeTestRule.waitUntilDefaultTimeout { onAttachCount == 1 && onDetatchCount == 0 }

        composeTestRule.runOnIdle { lifecycleOwner.handleLifecycleEvent(Lifecycle.Event.ON_PAUSE) }

        composeTestRule.waitUntilDefaultTimeout { onAttachCount == 1 && onDetatchCount == 1 }

        composeTestRule.runOnIdle { lifecycleOwner.handleLifecycleEvent(Lifecycle.Event.ON_RESUME) }

        composeTestRule.waitUntilDefaultTimeout { onAttachCount == 2 && onDetatchCount == 1 }
    }
}
